--- a/src/components/Navbar/navbar.styles.css
+++ b/src/components/Navbar/navbar.styles.css
@@ -145,6 +145,7 @@
   .nav-links {
     display: table;
     padding: 1.25rem;
+    font-size: 1.5rem;
     width: 100%;
     position: relative;
     top: 3.125rem;
